MCLOUD-5325: Move log section from .magento.env.yaml

--- a/src/Test/Unit/Config/Schema/_files/.magento.env.md
+++ b/src/Test/Unit/Config/Schema/_files/.magento.env.md
@@ -1,4 +1,4 @@
-## ENV_VARIABLE
+### ENV_VARIABLE
 
 Some description
 
@@ -8,7 +8,7 @@ Some description
 |Magento version|\>=2.1.24|
 |Stages|global|
 
-### Examples
+Examples
 
 ```yaml
   'Some example 1'
